package example.designpattern.creational.abstractfactory;

interface Button {
    void display();
}  