package example.designpattern.creational.abstractfactory;

interface ComboBox {
    public void display();  
}  