package example.designpattern.creational.abstractfactory;

class SpringComboBox implements ComboBox {
    @Override
    public void display() {
        System.out.println("显示绿色边框组合框。");  
    }  
}  