package example.designpattern.creational.abstractfactory;

interface TextField {
    public void display();  
}  